# puimuri-trainer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README  README.md  build.rs  test.md
.github/workflows/: docker-build.yaml
frontend/: .gitignore  components.d.ts  index.html  package-lock.json  package.json  vite.config.mts
frontend/src/: App.vue
frontend/src/components/: Puimuri.vue
frontend/src/locales/: en.json  fi.json
frontend/src/plugins/: i18n.ts  index.ts  vuetify.ts
puimuri-trainer/: Cargo.toml
puimuri-trainer/src/: equations.rs  lib.rs
src/: equations.rs  main.rs
